--- a/index.html
+++ b/index.html
@@ -5134,7 +5134,7 @@
                                         </p>
                                         <p>
                                           Make sure you support our TG
-                                          <a href="tglink">tglink</a>
+                                          <a href="https://t.me/freecz">https://t.me/freecz</a>
                                         </p>
                                       </div>
                                     </div>
@@ -5650,7 +5650,7 @@
                                           <span class="elementor-grid-item">
                                             <a
                                               class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-0d6bbc8"
-                                              href="tglink"
+                                              href="https://t.me/freecz"
                                               target="_blank"
                                             >
                                               <span
@@ -5671,7 +5671,7 @@
                                           <span class="elementor-grid-item">
                                             <a
                                               class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-0e7e741"
-                                              href="twitterlink"
+                                              href="https://twitter.com/freecz_sol"
                                               target="_blank"
                                             >
                                               <span
@@ -5870,7 +5870,7 @@
                             class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-47"
                           >
                             <a
-                              href="tglink"
+                              href="https://t.me/freecz"
                               aria-current="page"
                               class="menu-link"
                               >Socials</a
