--- a/index.html
+++ b/index.html
@@ -5840,7 +5840,7 @@
                             class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-44"
                           >
                             <a
-                              href="http://safucrypto.cz/#home"
+                              href="#home"
                               aria-current="page"
                               class="menu-link"
                               >Home</a
@@ -5850,7 +5850,7 @@
                             class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-45"
                           >
                             <a
-                              href="http://safucrypto.cz/#about"
+                              href="#about"
                               aria-current="page"
                               class="menu-link"
                               >About $FREECZ</a
@@ -5860,7 +5860,7 @@
                             class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-46"
                           >
                             <a
-                              href="http://safucrypto.cz/#how"
+                              href="howto"
                               aria-current="page"
                               class="menu-link"
                               >How To Join</a
