--- a/index.html
+++ b/index.html
@@ -3732,8 +3732,6 @@
       href="https://safucrypto.cz/xmlrpc.php?rsd"
     />
 
-    <link rel="canonical" href="https://safucrypto.cz/" />
-    <link rel="shortlink" href="https://safucrypto.cz/" />
     <link
       rel="alternate"
       type="application/json+oembed"
@@ -3817,7 +3815,7 @@
                       >
                         <span class="site-logo-img"
                           ><a
-                            href="https://safucrypto.cz/"
+                            href="/"
                             class="custom-logo-link"
                             rel="home"
                             aria-current="page"
