--- a/index.html
+++ b/index.html
@@ -3878,7 +3878,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-44"
                                 >
                                   <a
-                                    href="http://safucrypto.cz/#home"
+                                    href="#home"
                                     aria-current="page"
                                     class="menu-link"
                                     >Home</a
@@ -3889,7 +3889,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-45"
                                 >
                                   <a
-                                    href="http://safucrypto.cz/#about"
+                                    href="#about"
                                     aria-current="page"
                                     class="menu-link"
                                     >About $FREECZ</a
@@ -3900,7 +3900,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-46"
                                 >
                                   <a
-                                    href="http://safucrypto.cz/#how"
+                                    href="#how"
                                     aria-current="page"
                                     class="menu-link"
                                     >How To Join</a
@@ -3911,7 +3911,7 @@
                                   class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-47"
                                 >
                                   <a
-                                    href="http://safucrypto.cz/#socials"
+                                    href="#socials"
                                     aria-current="page"
                                     class="menu-link"
                                     >Socials</a
@@ -4308,6 +4308,11 @@
                                           the Love of Crypto, Memes, and
                                           CZ&#8217;s Freedom!
                                         </p>
+                                        <span
+                                          style="color: #fff; font-size: 16px"
+                                          >CA :
+                                          AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv</span
+                                        >
                                       </div>
                                     </div>
                                   </div>
