--- a/index.html
+++ b/index.html
@@ -3983,7 +3983,7 @@
                     >
                       <span class="site-logo-img"
                         ><a
-                          href="https://safucrypto.cz/"
+                          href="/"
                           class="custom-logo-link"
                           rel="home"
                           aria-current="page"
