--- a/index.html
+++ b/index.html
@@ -3939,12 +3939,15 @@
                       >
                         <a
                           class="ast-custom-button-link"
-                          href="buylink"
+                          href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv&fixed=in"
                           target="_self"
                           ><div class="ast-custom-button">
                             FOMO IN NOW!!!
                           </div></a
-                        ><a class="menu-link" href="buylink" target="_self"
+                        ><a
+                          class="menu-link"
+                          href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv&fixed=in"
+                          target="_self"
                           >FOMO IN NOW!!!</a
                         >
                       </div>
@@ -5131,7 +5134,7 @@
                                           Go to
                                           <font color="#046bd2"
                                             ><u
-                                              >buylink</u
+                                              >https://raydium.io/swap/?inputCurrency=sol&outputCurrency=AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv&fixed=in</u
                                             ></font
                                           >
                                         </p>
@@ -5877,10 +5880,13 @@
                 <div class="ast-builder-button-wrap ast-builder-button-size-">
                   <a
                     class="ast-custom-button-link"
-                    href="buylink"
+                    href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv&fixed=in"
                     target="_self"
                     ><div class="ast-custom-button">Buy Now</div></a
-                  ><a class="menu-link" href="buylink" target="_self"
+                  ><a
+                    class="menu-link"
+                    href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=AP9dmTfLMz2z1JsMtWfWtWSSLv6YPRxvXQHHqjaHZMFv&fixed=in"
+                    target="_self"
                     >Buy Now</a
                   >
                 </div>
